--- a/Publication.html
+++ b/Publication.html
@@ -129,10 +129,10 @@
         <ul>
         <p><font size=4><strong>[5]</strong></font>,  <strong>Zhenhua Yu*</strong>, Sadati, S. H., Helmut Hauser, Peter Childs, Thrishantha Nanayakkara. "A Semi-Supervised Reservoir Computing System Based on Tapered Whisker for Mobile Robot Terrain Identification and Roughness Estimation''.  in IEEE Robotics and Automation Letters (RA-L),  2022.  
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a>.
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.txt" target="_blank">bib</a>.</p>
+<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.txt" target="_blank">bibtex</a>.</p>
         <p><font size=4><strong>[4]</strong></font>,  <strong>Zhenhua Yu*</strong>, S. Perera, H. Hauser, P. R. N. Childs and T. Nanayakkara. "A Tapered Whisker-Based Physical Reservoir Computing System for Mobile Robot Terrain Identification in Unstructured Environments," in IEEE Robotics and Automation Letters (RA-L), vol. 7, no. 2, pp. 3608-3615, April 2022.  
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> 
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.txt" target="_blank">bib</a>.</p>     
+<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.txt" target="_blank">bibtex</a>.</p>     
         </ul>
 
     <h3><a id="2022-1" class="anchor" href="#2022-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conference 2022</h3>
@@ -142,7 +142,7 @@
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.txt" target="_blank">bib</a>.</p>
        <p><font size=4><strong>[4]</strong></font>,  <strong>Zhenhua Yu*</strong>, Sadati, S. H., Helmut Hauser, Peter Childs, Thrishantha Nanayakkara. "A Semi-Supervised Reservoir Computing System Based on Tapered Whisker for Mobile Robot Terrain Identification and Roughness Estimation''.  In 2022 IEEE 5th International Conference on Soft Robotics (RoboSoft 2022). IEEE. April,2022.. 
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a>.
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.txt" target="_blank">bib</a>.</p>
+<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.txt" target="_blank">bibtex</a>.</p>
        </ul>
     <hr>
 
@@ -152,7 +152,7 @@
     <ul>
         <p><font size=4><strong>[3]</strong></font>,  <strong>Zhenhua Yu*</strong>,  Sadati, S. H., Wegiriya, H., Childs, P., & Nanayakkara, T.``A Method to use Nonlinear Dynamics in a Whisker Sensor for Terrain Identification by Mobile Robots". In 2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2021) (pp. 8437-8443). IEEE. August,2021.  
 <a href="https://dr-zhenhua-yu.github.io//publication/2021_IROS.pdf" target="_blank">pdf</a> 
-<a href="https://dr-zhenhua-yu.github.io//publication/2021_IROS.txt" target="_blank">bib</a>.</p>
+<a href="https://dr-zhenhua-yu.github.io//publication/2021_IROS.txt" target="_blank">bibtex</a>.</p>
        </ul>
     <hr>
 
