--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
       </header>
       <section>
       <img src="IMG_2409_edit_pro_photo_square_small.jpg" height="320" width="250" alt="Zhenhua Yu"></h3>
-      <p>I am currently an PhD candidate of <a href="http://www.ou.edu/cas/economics">Robotics</a> at the <a href="http://www.ou.edu/">Imperial College London</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
-      <p>My research interests include labor economics, urban economics, the economics of education, and applications of machine learning.</p>
+      <p>I am currently an PhD candidate of <a href="http://www.ou.edu/cas/economics">Robotics</a> at the <a href="http://www.ou.edu/">Imperial College London</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>.</p>
+      <p>My research interests include .</p>
 
       <p>I have been awarded the <a href="https://twitter.com/AmazonScience/status/1511342518457229312" target="_blank">Amazon PhD Prizes for Outstanding Achievement in Robotics for my PhD research</a>!</p>
 
@@ -122,12 +122,7 @@
       <h3><b>News<b></h3>
       <p><b>2022</b></p>
       <ul>
-        <li><em><a href="https://www.amazon.com/Positive-Intelligence-Individuals-Achieve-Potential/dp/1608322785">Positive Intelligence</a></em>, by Shirzad Chamine</li>
-        <li><em><a href="https://www.amazon.com/Obesity-Code-Unlocking-Secrets-Weight/dp/1771641258/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=">The Obesity Code</a></em>, by Dr. Jason Fung</li>
-        <li><em><a href="https://blog.supplysideliberal.com/post/2019/6/18/miles-kimball-on-diet-and-health-a-readers-guide">Collection of Blog Posts on Obesity Reduction</a></em>, by Miles Kimball</li>
-        <li><em><a href="https://www.amazon.com/World-Without-Email-Reimagining-Communication/dp/0525536558">A World Without Email</a></em>, <em><a href="https://www.amazon.com/Digital-Minimalism-Choosing-Focused-Noisy/dp/0525536515">Digital Minimalism</a></em> and <em><a href="https://www.amazon.com/dp/B00X47ZVXM">Deep Work</a></em>, all by Cal Newport</li>
-        <li><em><a href="https://www.amazon.com/Atomic-Habits-Proven-Build-Break/dp/0735211299">Atomic Habits</a></em>, by James Clear</li>
-        <li><em><a href="http://joshuafoer.com/moonwalking-with-einstein/">Moonwalking with Einstein</a></em>, by Joshua Foer</li>
+        <li><em>I have been awarded the <a href="https://twitter.com/AmazonScience/status/1511342518457229312" target="_blank">Amazon PhD Prizes for Outstanding Achievement in Robotics for my PhD research</a></li>
       </ul>
     </div>
     <script src="javascripts/scale.fix.js"></script>
