--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </header>
       <section>
       <img src="IMG_2409_edit_pro_photo_square_small.jpg" height="320" width="250" alt="Zhenhua Yu"></h3>
-      <p>I am currently an PhD candidate of <a href="http://www.ou.edu/cas/economics">Robotics</a> at the <a href="http://www.ou.edu/">Imperial College London</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>.</p>
+      <p>I am currently an PhD candidate of <a href="http://www.ou.edu/cas/economics">Robotics</a> at the <a href="http://www.ou.edu/">Imperial College London</a> and Research Affiliate at the <a href="https://www.imperial.ac.uk/morph-lab">Morph Lab<br>Dyson School of Design Engineering </a>.</p>
       <p>My research interests include .</p>
 
       <p>I have been awarded the <a href="https://twitter.com/AmazonScience/status/1511342518457229312" target="_blank">Amazon PhD Prizes for Outstanding Achievement in Robotics for my PhD research</a>!</p>
